fix details being too small

--- a/app/assets/stylesheets/channel_details.scss
+++ b/app/assets/stylesheets/channel_details.scss
@@ -3,7 +3,7 @@
 .channel-details {
   height: 100%;
   min-width: 250px;
-  width: 300px;
+  width: 400px;
   display: flex;
   flex-direction: column;
   border-left: 1px solid #ddd;
